# moonzip-back

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json
.github/workflows/: ci-docker.yml  ci.yml
.sqlx/: query-053e2126d6496ec69d1e63c2d8b424f0118b392a7095f96f11d13ec210474d2b.json  query-08a529413e1b922130aefae087bd9b165b8759f357366cc4193966960784a8fa.json  query-0eba4ec0045d3b164c285f9144b02d6571502df6ff34fd26cf90ad1bc5bef154.json  query-112a9b56631c0d6d0d99701e1f3d40a63181dee2b7e1963c29e5846427915398.json  query-1c3ea08feb2f2b2c3df0578bbdd2b818b57c7633ecd0877a640b78364e88a8c6.json  query-1fc1407efafaf684b28fbb1b8863d7cdfcf0b2611d629eeca60c0420606894c4.json  query-25dae6b140ee03130051a00c14bbf3cd560eeb8b668378b395feeea46941883b.json  query-287bfaf17c191d5368bd8021ab7238f281f23c2a68194d36fef074e2e555f7f2.json  query-2aa67c60e9cec23242b5ed0870ab7500b799a5babc65d44bc3ccc81b4217204a.json  query-3dc80d8d75d6d439a2a7208da6f4a08040f5067cab5bc5bcc0e8e7b057af8256.json  query-4ce590cdba36325019ad0623e795a19842dcbf6b0372dfc70e58b3ca4235f059.json  query-4ceb8fd2005667814132eaf0ac2d7e1cad45738c226f4eaa3e64aed98292b83c.json  query-5298d7543703223effaf850381abadd76239718d0e11adbd645fe6f1e6e20294.json  query-5324f14cadf462432d6741dde64387b12b4f8f2d47b15bd5923e0eacc41179d1.json  query-5371b37df128e30106a75b0f1a67dff529f832b6f1952ccb40afbd3fa924d58d.json  query-56d695f8f91c3b5567f6fc8e9822c84f47235ed8cc62bff2ace8ad0997871719.json  query-5e28e3739a827df6881d21d22c070a0b6c2d7ed95448bc49a7b6e7b01bef8f0c.json  query-6cafc048b1a944dc1fe9600e0a6433033abfdaacb66eaacea45a656cceb542f7.json  query-8758d5c4d4c637ffa8660a2509627a99c9b146dbda2e105aa1d1ba4fa61d0648.json  query-89ef0cfe928b5c33602cc1855f72512d93d4265c0917e2a439e6a5f4e41ee3f8.json  query-af1f5a401058236b3fcdf2ca5d86a4d5f6521b6e299c16178f0ce52d6d749efe.json  query-b6c83bfe016a59ae396dd43650afb2d6753eab13899ef93c36276c018056f789.json  query-bd87a49c1f04ee24951528c3e1eac174d975e69fa336632c9bc082a00385742d.json  query-c171bff8c3130e583f00b85d0e71e0d68edf930bc521f1c114d0882d6af31f61.json  query-c6043d8c532a41d8db5882d1d6b89d0df85cb1298e9c9499195034c6d87b35e6.json  query-dc5cca0a383b934041915764c4a4688dbeb860523fab45c9f207923328fee113.json  query-e51d367fdf985f0a26db1279638cdfcd13f85c686ef0163f8c325ea322feb28d.json  query-e8dfc86e5bdddc65147a2ce1aa5790f8d431fb34b407770db2939c899a4a0584.json  query-f696a127cad71ebd5d104a24cae1dec5212c7ab88f2f7eb7b654df5329cf1839.json
backend/: Cargo.toml
backend/db/migrations/: 0001_basic_setup.down.sql  0001_basic_setup.up.sql
backend/src/: cfg.rs  lib.rs  log.rs  utils.rs
backend/src/api/: mod.rs  server.rs
backend/src/api/auth/: mod.rs  provider.rs
backend/src/app/: exposed.rs  mod.rs
backend/src/app/chain_sync/: cfg.rs  fetcher.rs  geyser.rs  mod.rs  parser.rs  storage.rs
backend/src/app/instructions/: lock.rs  mod.rs  mpl.rs  mzip.rs  openbook.rs  pumpfun.rs  raydium.rs  solana.rs  utils.rs
backend/src/app/keys_loader/: mod.rs
backend/src/app/migrator/: mod.rs  txs.rs
backend/src/app/migrator/ipfs/: mod.rs  moonzip.rs  pumpfun.rs
backend/src/app/migrator/keys_provider/: mod.rs
backend/src/app/state/: mod.rs  project.rs
backend/src/app/storage/: misc.rs  mod.rs  project.rs  user_info.rs
backend/src/solana/: mod.rs
backend/src/utils/: keypair.rs  mod.rs
clients/: backend_client.ts  backend_openapi.json
config/: default.yml
config/test/: api_server.yml  base.yml  chain_syncer.yml  geyser_grpc.json  migrator.yml
deploy/: app.haproxy.lua  haproxy.cfg  rates.map
dev/: docker-compose.dev.yml
docker/: Dockerfile.ci  Dockerfile.dev  bake.ci.hcl
integrations/pumpfun-cpi/: Cargo.toml
keys/test/: mau6Cw3hZX7sPNtDcq69wNyyMbsNcUrubRmTPvtnkTN.json
programs/moonzip/: Cargo.toml
programs/moonzip/src/: common.rs  events.rs  fee.rs  lib.rs  misc.rs  project.rs  pumpfun.rs  static_pool.rs  transmuter.rs  utils.rs
programs/moonzip/src/curved_pool/: curve.rs  global.rs  mod.rs
programs/pumpfun-cpi/src/: lib.rs
services-common/: Cargo.toml
services-common/src/: cfg.rs  lib.rs
services-common/src/api/: mod.rs  response.rs  server.rs
services-common/src/api/auth/: mod.rs
services-common/src/api/captcha/: constants.rs  mod.rs  provider.rs
services-common/src/solana/: any_tx.rs  helius.rs  jito.rs  mod.rs  pool.rs
services-common/src/utils/: keypair.rs  limiter.rs  mod.rs  period_fetch.rs  tests.rs
tests/: curved_pool.ts  pumpfun.ts  static_pool.ts  transmuter.ts  utils.ts
tests/data/: metadata.json
tests/e2e/: project.ts  user_profile.ts
tests/mocks/helius/: server.ts
tests/mocks/jito/: server.ts
tests/mocks/pinata/: server.ts
tests/mocks/pumpfun/: server.ts
tests/program/: curved_pool.ts  static_pool.ts  transmuter.ts
tests/utils/: helpers.ts  pumpfun.ts  test_migrator.sh  test_validator.sh  utils.ts
