[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
services-common = { path = "../services-common" }

config = { version = "0.15" }
moonzip = { path = "../programs/moonzip" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
once_cell = "1"
derive_more = { version = "1", features = ["deref"] }
governor = "0.8"
validator = { version = "0.19", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "rust_decimal",
    "uuid",
    "chrono",
] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive_default = "0.1"
serde_with = "3"
humantime-serde = "1"
bincode = "1"
bs58 = "0.5"

solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-client = "1.18.26"
anchor-client = { version = "0.30", features = ["async"] }
anchor-spl = { version = "0.30.1", features = ["associated_token", "token"] }
pumpfun-cpi = { path = "../integrations/pumpfun-cpi" }
locker = { git = "https://github.com/jup-ag/jup-lock.git", features = ["cpi"] }

axum = { version = "0.8", features = ["macros"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipauto = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
jsonwebtoken = "9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

reqwest = { version = "0.12", features = ["json", "multipart"] }
http = "1"

[profile.dev.package.sqlx-macros]
opt-level = 3

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"
