[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
services-common = { path = "../services-common" }

config = { version = "0.15" }
moonzip = { path = "../programs/moonzip", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
paste = "1"
anyhow = "1"
thiserror = "2"
once_cell = "1"
derive_more = { version = "1", features = ["deref"] }
governor = "0.8"
validator = { version = "0.19", features = ["derive"] }
futures-util = "0.3"
futures = "0.3"
bytes = "1"
rayon = "1"

chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "rust_decimal",
    "uuid",
    "chrono",
] }
rust_decimal = { version = "1.36", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
const_format = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive_default = "0.1"
serde_with = "3"
humantime-serde = "1"
bincode = "1"
bs58 = "0.5"
base64 = "0.22"

solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-client = "1.18.26"
solana-transaction-status = "1.18.26"
yellowstone-grpc-client = { git = "https://github.com/decr1x/yellowstone-grpc.git", branch = "v1.15.3-enhanced" }
yellowstone-grpc-proto = { git = "https://github.com/decr1x/yellowstone-grpc.git", branch = "v1.15.3-enhanced" }
anchor-client = { version = "0.30", features = ["async"] }
anchor-syn = { version = "0.30", features = ["hash"] }
anchor-spl = { version = "0.30.1", features = ["associated_token", "token"] }
spl-token = { version = "4" }
mpl-token-metadata = { version = "4.1" }
pumpfun-cpi = { path = "../integrations/pumpfun-cpi", features = [
    "cpi",
    "no-entrypoint",
] }
locker = { git = "https://github.com/jup-ag/jup-lock.git", features = [
  "cpi",
  "no-entrypoint",
], rev = "9c41d62c47a571a6492a715c7c252d0b8570ab7e" }
raydium_amm = { git = "https://github.com/decr1x/raydium-amm.git", features = [
    "no-entrypoint",
] }
serum_dex = { git = "https://github.com/openbook-dex/program.git", default-features = false, features = [
    "no-entrypoint",
    "client",
    "program",
] }
borsh = "=0.10.4"

axum = { version = "0.8", features = ["macros", "multipart"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipauto = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
jsonwebtoken = "9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
http = "1"
ed25519-dalek = "1"
rustrict = "=0.1.42"

[profile.dev.package.sqlx-macros]
opt-level = 3

[[bin]]
name = "api_gen"
path = "./src/bin/api_gen.rs"

[[bin]]
name = "api_server"
path = "./src/bin/api_server.rs"

[[bin]]
name = "migrator"
path = "./src/bin/migrator.rs"

[[bin]]
name = "chain_syncer"
path = "./src/bin/chain_syncer.rs"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"
