[package]
name = "services-common"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.15" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
once_cell = "1"
derive_more = { version = "1", features = ["deref", "from"] }
governor = "0.8"
sync_wrapper = "1"

axum = { version = "0.8", features = ["macros", "multipart"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipauto = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-redoc = { version = "6", features = ["axum"] }
utoipa-rapidoc = { version = "6", features = ["axum"] }
jsonwebtoken = "9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive_default = "0.1"
serde_with = "3"
humantime-serde = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

reqwest = { version = "0.12", features = ["json"] }
http = "1"

solana-sdk = "1.18.26"
solana-client = "1.18.26"
anchor-client = { version = "0.30", features = ["async"] }

chrono = { version = "0.4", features = ["serde"] }
bincode = "1"
bs58 = "0.5"
base64 = "0.22"
rand = "0.8"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tungstenite = "0.26"
futures-util = "0.3"
delegate = "0.13"
uuid = { version = "1", features = ["v4"] }
url = "2.5.4"
