[package]
name = "moonzip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moonzip"

[features]
default = ["cpi"]
cpi = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["associated_token", "token"] }
const_str_to_pubkey = "0.1.1"
borsh = "0.10"
paste = "1"
num = "0.4"
derive_more = { version = "1", features = ["from", "into"] }
pumpfun-cpi = { path = "../../integrations/pumpfun-cpi" }

[dev-dependencies]
anyhow = "1"
